--- a/web/css/site.css
+++ b/web/css/site.css
@@ -86,3 +86,129 @@ a.desc:after {
 .form-group {
     margin-bottom: 1rem;
 }
+
+p{
+    margin: 0px;
+}
+
+/* Стили тарифа */
+
+.rate .rate__list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.rate .rate__list .rate__list_element{
+    width: 24%;
+    box-shadow: 0 5px 15px rgba(57, 57, 58, 0.15);
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.rate .rate__list .rate__list_element:hover{
+    color: #fff !important;
+    background: #4382D6;
+}
+
+.rate .rate__list .rate__list_element:hover .rate__list_element_price p{
+    color: #fff !important;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_name p.title{
+    font-size: 24px;
+    min-height: 56px;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed p{
+    font-size: 14px;
+
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed .rate__list_element_speed_squar{
+    border: 4px solid #F7F7F7;
+    border-radius: 200px;
+    width: 130px;
+    height: 130px;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    background: #fff;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed .rate__list_element_speed_squar p:first-child{
+    color: #5a5d5f;
+    font-weight: 100;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed .rate__list_element_speed_squar p:last-child{
+    font-weight: 400;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed .rate__list_element_speed_squar p{
+    color: #2214eb;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed .rate__list_element_speed_squar p.speed{
+    position: relative;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_speed .rate__list_element_speed_squar .rate__list_element_speed_setting{
+    background: url(../assets/pencil.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    right: -5px;
+    top: 6px;
+    cursor: pointer;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_price{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_price p:first-child{
+    color: #5a5d5f;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_price p:last-child{
+    color: #2214eb;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.rate .rate__list .rate__list_element .rate__list_element_price p:last-child span{
+    font-weight: 100;
+}
+
+
+.rate .rate__list .rate__list_element .rate__list_element_button button{
+    width: 100%;
+    margin-top: 10px;
+    border: 1px solid #4382D6;
+    background: #fff;
+    padding: 10px 0px;
+    border-radius: 10px;
+    color: #4382D6;
+} 
+
+.rate .rate__list .rate__list_element .rate__list_element_description{
+    max-height: 100px;
+    font-size: 14px;
+    margin: 10px 0px;
+}
+
+/* Стили тарифа */
